# signalbridge-test-suite

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  20230709_135435_output.json  20230709_141023_output.json  20230716_164750_output.json  ARCHITECTURE.md  CLAUDE.md  README.md  latency_test.py  logging_config.ini  output.json  pyproject.toml  pytest.ini  pytest_log.txt  requirements.test.txt  requirements.txt  ruff.toml  setup.cfg
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lint.yml  publish.yml
docs/: ARCHITECTURE.md  README.md  firmware_stress_test_plan.md
scripts/: precommit-mutmut.sh  precommit-pytest.sh  precommit-ruff-format.sh  precommit-ruff-lint.sh
src/: __init__.py  application_manager.py  base_test.py  baud_rate_test.py  checksum.py  command_mode.py  const.py  custom_input.py  fault_frames.py  globals.py  keypad_adc_monitor.py  latency_test.py  logger.py  logger_config.py  main.py  regression_test.py  regression_tests.py  result_format.py  runner_cli.py  serial_interface.py  status_mode.py  stress_config.py  stress_evaluator.py  stress_reporter.py  stress_test.py  ui_console.py  visualize_results.py
src/test_results/: 20260403-143142-85a933e0-stress.json
tests/: __init__.py  conftest.py  test_application_manager.py  test_base_test.py  test_baud_rate_test.py  test_checksum.py  test_command_mode.py  test_fault_frames.py  test_keypad_adc_monitor.py  test_latency_test.py  test_logger_config.py  test_main.py  test_protocol_properties.py  test_regression_test.py  test_result_format.py  test_runner_cli.py  test_serial_interface.py  test_status_mode.py  test_stress_config.py  test_stress_evaluator.py  test_stress_reporter.py  test_stress_test.py  test_visualize_results.py
