[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalbridge-test-suite"
version = "0.1.0"
description = "SignalBridge Test Suite"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [{ name = "SignalBridge contributors" }]
requires-python = ">=3.13"
dependencies = [
    "alive-progress==3.3.0",
    "cobs==1.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.1",
    "pyserial==3.5",
    "rich>=13.9.0",
]

[project.urls]
Repository = "https://github.com/carlosmazzei/signalbridge-test-suite"
Issues = "https://github.com/carlosmazzei/signalbridge-test-suite/issues"

[project.scripts]
signalbridge-test-suite = "main:main"
signalbridge-runner = "runner_cli:main"

[dependency-groups]
dev = [
    "coverage>=7.5",
    "hypothesis>=6.112.0",
    "mutmut>=3.2.2",
    "pre-commit==4.6.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "ruff==0.15.12",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "__init__",
    "application_manager",
    "base_test",
    "baud_rate_test",
    "checksum",
    "command_mode",
    "const",
    "fault_frames",
    "keypad_adc_monitor",
    "latency_test",
    "logger_config",
    "main",
    "regression_test",
    "result_format",
    "runner_cli",
    "serial_interface",
    "status_mode",
    "stress_config",
    "stress_evaluator",
    "stress_reporter",
    "stress_test",
    "ui_console",
    "visualize_results",
]
